--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AppCartoInei</string>
+    <string name="app_name">App CartoINEI</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
 
